implement auto FEFO and manual ingredient deduction
